main.tf
#New main file for terraform deploy
#Main file

#Security groups

resource "aws_security_group" "public" {
  provider    = aws.east
  name        = var.sg_test
  description = "Used for public and private instances for load balancer access"
  vpc_id      = data.aws_vpc.vpc_test.id

  #SSH

  ingress {
    from_port   = 22
    to_port     = 22
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  #HTTP

  ingress {
    from_port   = 80
    to_port     = 80
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  #Outbound internet access

  egress {
    from_port   = 0
    to_port     = 0
    protocol    = "-1"
    cidr_blocks = ["0.0.0.0/0"]
  }
}
